# tcc

./: .gitignore  Cargo.toml  infos.txt  issuer.did
db/credentials/sd/: birth_certificate.txt  drivers_license.txt  my_credential.txt
db/credentials/templates/: apresentação.json  birth_certificate.json  drivers_license.json  my_credential.json
db/credentials_templates/: birth_certificate.json  drivers_license.json  my_credential.json
examples/: carteira_de_identidade.json  carteira_preenchida.json
src/: lib.rs  main.rs
src/app/: app.rs  app_context.rs  mod.rs
src/command/: command.rs  command_create_vc.rs  command_create_vc_normal.rs  command_create_vc_sd.rs  command_create_vp.rs  command_list_dids.rs  command_list_vcs.rs  command_verify_vc.rs  create_did_command.rs  create_vc_command.rs  create_vp_command.rs  exit_app_command.rs  list_created_items.rs  list_dids_command.rs  list_vcs_command.rs  main_menu_command.rs  menu_create_vc.rs  menu_main_menu.rs  mod.rs  verify_vc_command.rs
src/database/: database_utils.rs  db_connector.rs  mod.rs  sqlite_conn.rs
src/database/models/: did.rs  mod.rs  vc.rs
src/experiments/: newest_main.rs
src/io/: input.rs  mod.rs  output.rs
src/state/: fsm.rs  mod.rs  screen_event.rs  screen_state.rs
src/utils/: config.rs  mod.rs  utils.rs
