[package]
name = "tcc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
crossterm = "0.28.1"
dotenv = "0.15.0"
identity_eddsa_verifier = "1.4.0"
identity_iota = { version = "1.2.0", features = ["iota-client", "client", "memstore", "domain-linkage", "revocation-bitmap", "status-list-2021", "jpt-bbs-plus", "resolver"] }
identity_stronghold = "1.4.0"
iota-sdk = "1.1.5"
once_cell = "1.20.2"
rand = "0.8.5"
rusqlite = "0.32.1"
serde_json = "1.0.128"
tokio = "1.40.0"
chrono = "0.4.38"
users = "0.11.0"
colored = "2.1.0"
rust-fsm = "0.7.0"
termion = "4.0.3"
hex = "0.4.3"
prettytable = "0.10.0"

[[bin]]
name = "petrus"
path = "src/main.rs"

[lib]
name="tcc"
path="src/lib.rs"
